NEWS - OpenPrinting CUPS Filters v1.27.5 - 2020-06-05
-----------------------------------------------------

CHANGES IN V2.0.0

	- driverless: If there are no driverless IPP printers
	  available let "driverless" terminate with exit code 0 and
	  not 1, to follow CUPS' standard of backends in discovery
	  mode terminating with 0 if there are no appropriate printers
	  found (Issue #375).
	- foomatic-rip: The fixes for zero-page-job handling (Pull
	  request #209) broke PostScript streaming support. Changed
	  method to check whether a PostScript input file is non-empty
	  to only need to read and buffer the input up to the first
	  page.
	- libcupsfilters: Changed "ColorModel" option in the PPDs from
	  the PPD generator to mirror the print-color-mode IPP
	  attribute instead of providing all color space/depth combos
	  for manual selection. Color space and depth are now
	  auto-selected by the urf-supported and
	  pwg-raster-document-type-supported printer IPP attributes
	  and the settings of print-color-mode and print-quality.
	  This is now implemented in the ghostscript() filter function
	  both for use of the auto-generated PPD file for driverless
	  iPP printers and use without PPD, based on IPP attributes.
	  For this the new library functions cupsRasterPrepareHeader()
	  to create a header for Raster output and
	  cupsRasterSetColorSpace() to auto-select color space and
	  depth were created.
	- libcupsfilters: In the ghostscript() filter function fixed
	  Ghostscript command line for counting pages as it took too
	  long on PDFs from evince when printing DjVu files (Issue
	  #354, Pull request #371, Ubuntu bug #1920730).
	- cups-browsed: Renamed ldap_connect() due to conflict in
	  new openldap (Issue #367, Pull request #370).
	- libcupsfilters: Clean-up of human-readable string handling
	  in the PPD generator.
	- libcupsfilters: Function name clean-up for the PPD
	  generator.
	- libppd: Removed ppdCreateFromIPPCUPS(), we have a better one